[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = {version = "1.28.1", features = ["rt-multi-thread", "macros"]}
